# nix-mcp-server

./: .mcp.json.example  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile  plugin.json
.claude-plugin/: plugin.json
src/: background.rs  config.rs  main.rs  nix_runner.rs  output.rs  server.rs  validators.rs
src/lsp_client/: mod.rs  spawned.rs
src/resources/: build_log.rs  closure.rs  derivation.rs  mod.rs
src/tools/: build.rs  cachix.rs  derivation.rs  eval.rs  flake.rs  flakehub.rs  hash.rs  log.rs  lsp.rs  mod.rs  run.rs  search.rs  store.rs
