[package]
name = "nix-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server providing nix operations as tools for Claude Code"

[dependencies]
mcp-server = { git = "https://github.com/amarbel-llc/rust-lib-mcp", features = ["tools", "resources"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
anyhow = "1"
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1"
lsp-types = "0.95"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
